Finished admin module. Fixed few bugs

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
-APP_NAME=Erie
+APP_NAME="Voting App"
 APP_ENV=local
 APP_KEY=base64:lMcn6apNZiyMqUNa3mAW6e57KtVf3fyN8FrP4opEmCE=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://localhost:1000
 ZIGGY_APP_URL=https://app.erie.pk
 API_VERSION=V1
 DEBUGBAR_ENABLED=${APP_DEBUG}
-TELESCOPE_ENABLED=true
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -29,15 +28,6 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
-# MAIL_MAILER=smtp
-# MAIL_HOST=mail.erie.pk
-# MAIL_PORT=465
-# MAIL_USERNAME='no-reply@erie.pk'
-# MAIL_PASSWORD='kf2;ZY^@E2ll'
-# MAIL_ENCRYPTION=ssl
-# MAIL_FROM_ADDRESS='no-reply@erie.pk'
-# MAIL_FROM_NAME="${APP_NAME}"
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
@@ -65,10 +55,3 @@ TWILIO_FROM="+14342048026"
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 MIX_SETTING_SAVE_ROUTE="dashboard.config.updateSetting"
-
-
-OUTREACH_USERNAME="rchsagacious"
-OUTREACH_PASSWORD="Sagacious@123!@#"
-
-
-GOOGLE_MAPS_API="AIzaSyBjBP84xPJQtpry6arkaWh7r5WZHYQNigU"
